@@ -1,98 +1,14 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
  * @version 0.1.98
- * Colours */
-@button-border: gainsboro;
-@checkbox-bg-false: firebrick;
-@checkbox-bg-true: seagreen;
-@exception-bg: lightpink;
-@field-focus-outline: darkorange;
-@field-required: firebrick;
-@form-bg-border-focus: seagreen;
-@input-border: gainsboro;
-@line-border: gray;
-@panel-shadow: gray;
-@text-close: firebrick;
-
-@text-dark: black;
-@text-disabled: gray;
-@text-doc-punc: sienna;
-@text-link: seagreen;
-@text-watermark: gray;
-
-@text-light: whitesmoke;
-@text-disabled-light: gainsboro;
-@text-link-light: cornsilk;
-@text-watermark-light: ivory;
-
-/* Dimensions */
-@alert-min-width: 10rem;
-@alert-max-width: 18rem;
-
-@checkbox-height: 1.25rem;
-@checkbox-width: 40px;
-@checkbox-width-knob: 20px;
-
-@display-text-min-width: 10rem;
-@display-text-max-width: 20rem;
-
-@ds-form-max-height-vertical: 60vh;
-@ds-form-max-width-horizontal: 21rem;
-
-@error-max-width: 50rem;
-
-@field-min-width: 13rem;
-@field-row-gap: 0.5rem;
-@field-col-gap: 0.5rem;
-
-@filemanager-min-width: 10rem;
-
-@form-min-width: 15rem;
-@form-max-width: 60rem;
-
-@input-min-width: 4rem;
-@input-max-width: 24rem;
-@input-max-width-compound: 12rem;
-
-@label-width-base: 2.5rem;
-@label-width-tiny: 3rem;
-@label-width-narrow: (@label-width-base + @label-width-tiny);
-@label-width: (@label-width-tiny + @label-width-narrow);
-@label-width-wide: (@label-width-narrow + @label-width);
-
-@select-min-width: 4rem;
-@select-max-width: 12rem;
-@select-option-min-width: 8rem;
-
-@selector-min-width: 16rem;
-
-@tile-min-width: 8ch;
-
-@textarea-min-height: 3lh;
-@textarea-min-width: 18rem;
-@textarea-max-width: 40rem;
-
-/* Font Sizes and Weights */
-@button-font-size: 0.7rem;
-@button-font-weight: 410;
-@data-font-size: 0.8rem;
-@data-font-weight: normal;
-@system-font-size: 0.8rem;
-@title-font-size: 1rem;
-@title-font-weight: normal;
-
-#fonts() {
-    cursive: 'Segoe Print', 'Bradley Hand', 'Chilanka', casual, cursive;
-    mono: 'Cascadia Code', 'Menlo', 'DejaVu Sans Mono', ui-monospace, monospace;
-    sans: 'Roboto', 'Segoe UI', 'Helvetica', system-ui, sans-serif;
-    serif: 'DejaVu Serif', 'Sitka Small', serif;
-}
+ */
+@import "wcom-05-constants";
 form.classic {
     --label-width: @label-width;
-    --form-bg-semitrans: hsl(from var(--bg-lighter) h s l / 0.25);
-    background: var(--form-bg-semitrans); border-radius: 5px;
+    --bg-lighter-semitrans: hsl(from var(--bg-lighter) h s l / 0.25);
+    background: var(--bg-lighter-semitrans); border-radius: 5px;
     box-shadow: 3px 3px 3px @panel-shadow; color: @text-dark;
     display: inline-block; padding: 0 0.5rem 0.5rem; position: relative;
-    &.shiny {
+    &.bling {
         @property --angle {
             syntax: '<angle>'; initial-value: 0deg; inherits: false;
         }
@@ -209,7 +125,8 @@ form.classic {
             grid-template-areas: "label input selector" "blank alert alert";
             justify-content: center; row-gap: 0.25rem;
             input {
-                height: 1.75rem; margin-top: 1.25rem; max-width: unset;
+                height: 1.75rem; margin-top: 1.25rem;
+                max-width: @input-max-width-compound !important;
                 outline: transparent;
                 &[type=password], &[type=text]:not(.digit) {
                     border-radius: 50px; padding-left: 0.75rem;
@@ -272,7 +189,6 @@ form.classic {
             }
         }
         input {
-            border: 2px inset @input-border; height: 1.75rem;
             &:focus {
                 background: var(--bg-base);
             }
@@ -282,10 +198,10 @@ form.classic {
             &[type=file] {
                 &::file-selector-button {
                     background: var(--button-bg);
-                    border: 2px outset @button-border; border-radius: 50px;
+                    border: 2px outset @btn-border; border-radius: 50px;
                     color: @text-link; cursor: pointer;
-                    font-family: #fonts[sans]; font-size: @button-font-size;
-                    font-weight: @button-font-weight; letter-spacing: 0.1rem;
+                    font-family: #fonts[sans]; font-size: @btn-font-size;
+                    font-weight: @btn-font-weight; letter-spacing: 0.1rem;
                     line-height: 0.8rem; padding: 0.366rem 0.75rem;
                     text-transform: uppercase;
                 }
@@ -293,19 +209,22 @@ form.classic {
                     color: @text-dark;
                 }
             }
+            &:not([type=file], .digit) {
+                border: 2px inset @input-border; height: 1.75rem;
+            }
             &[readonly=readonly] {
                 color: @text-disabled;
             }
             &[readonly=readonly][type=datetime-local]:not(.tile) {
-                background: var(--form-bg-semitrans);
+                background: var(--bg-lighter-semitrans);
                 border: 0; color: @text-dark;
             }
             &[type=submit] {
                 font-family: #fonts[sans]; font-size: @system-font-size;
             }
-            &:not([type=checkbox], [type=submit]) {
+            &:not([type=checkbox], [type=submit], .digit) {
                 max-width: @input-max-width;
-                &:not(.digit) {
+                &:not([size]) {
                     min-width: @input-min-width;
                 }
             }
@@ -313,7 +232,7 @@ form.classic {
         select {
             background: var(--button-bg); border: 2px inset @input-border;
             max-width: @select-max-width; min-width: @select-min-width;
-            padding: 0.25rem;
+            padding: 0.1875rem 0.25rem;
             &:not(.select-multiple) option {
                 font-family: #fonts[sans]; font-size: @system-font-size;
             }
@@ -357,7 +276,7 @@ form.classic {
     .data-structure, .input-button, .input-selector {
         isolation: isolate;
         a.form-button, button {
-            background: var(--button-bg); border: 2px outset @button-border;
+            background: var(--button-bg); border: 2px outset @btn-border;
             border-radius: 50px; color: @text-link;
             cursor: pointer; display: inline-block; overflow: hidden;
             position: relative; text-decoration: none;
@@ -374,14 +293,14 @@ form.classic {
                 inset: 3px; position: absolute; z-index: 2;
             }
             &:hover {
-                border: 2px inset @button-border; color: @text-dark;
+                border: 2px inset @btn-border; color: @text-dark;
                 &::before {
                     opacity: 1;
                 }
             }
             span, svg {
-                font-family: #fonts[sans]; font-size: @button-font-size;
-                font-weight: @button-font-weight; letter-spacing: 0.1rem;
+                font-family: #fonts[sans]; font-size: @btn-font-size;
+                font-weight: @btn-font-weight; letter-spacing: 0.1rem;
                 position: relative; text-decoration: none;
                 text-transform: uppercase; white-space: nowrap; z-index: 3;
             }
@@ -396,7 +315,6 @@ form.classic {
             padding: 0.0625rem 0.75rem 0.25rem;
         }
         button {
-            padding: 0.1875rem 0.75rem 0.3125rem;
             &[disabled=disabled], &[disabled=disabled]::after {
                 background: var(--button-bg-disabled);
             }
@@ -405,6 +323,9 @@ form.classic {
     .data-structure {
         align-items: flex-start; display: flex; flex-direction: column;
         row-gap: @field-row-gap;
+        button {
+            padding: 0.25rem 0.75rem;
+        }
     }
     .digit-input-wrapper {
         display: flex; grid-area: input;
@@ -467,8 +388,8 @@ form.classic {
             }
         }
         .ds-input.input-text[readonly=readonly] {
-            background: var(--form-bg-semitrans); border: 0; border-radius: 0;
-            color: @text-dark; padding: 0;
+            background: var(--bg-lighter-semitrans); border: 0;
+            border-radius: 0; color: @text-dark; padding: 0;
         }
         .ds-output {
             box-sizing: content-box; font-size: @system-font-size;
@@ -521,14 +442,14 @@ form.classic {
             padding: 2px 0; position: relative;
             &::before {
                 background: @checkbox-bg-false;
-                border: 2px inset @button-border; border-radius: 10px;
+                border: 2px inset @btn-border; border-radius: 10px;
                 content: ''; display: block; position: absolute;
                 height: @checkbox-height; left: 0; width: @checkbox-width;
                 z-index: 1;
             }
             &::after {
                 background: var(--button-bg);
-                border: 2px inset @button-border; border-radius: 10px;
+                border: 2px inset @btn-border; border-radius: 10px;
                 content: ''; display: block; position: absolute;
                 height: @checkbox-height; left: 0;
                 width: @checkbox-width-knob; z-index: 2;
@@ -561,6 +482,9 @@ form.classic {
         &.right {
             margin-right: 0 !important; position: absolute; right: 1rem;
         }
+        button {
+            padding: 0.1875rem 0.75rem 0.3125rem;
+        }
     }
     .input-colour {
         align-items: center !important;
@@ -577,7 +501,7 @@ form.classic {
         span {
             font-family: #fonts[serif]; font-size: @data-font-size;
             grid-area: input; max-width: @display-text-max-width;
-            min-width: @display-text-min-width; padding: 0.25rem;
+            min-width: @display-text-min-width; padding: 0.1875rem 0.25rem;
             &.breaking-text {
                 white-space: break-spaces;
             }
@@ -690,7 +614,7 @@ form.classic {
     .input-integer {
         .digit {
             border-left: none; border-radius: 0; border-right: none;
-            outline: 0; text-align: center; width: 2rem;
+            height: 1.75rem; outline: 0; text-align: center; width: 2rem;
             &:first-child {
                 border-left: 2px inset @input-border;
                 border-bottom-left-radius: 5px; border-top-left-radius: 5px;
@@ -711,12 +635,12 @@ form.classic {
         }
     }
     .input-selector button {
-        grid-area: selector;
+        grid-area: selector; padding: 0.1875rem 0.75rem 0.3125rem;
     }
     .input-textarea:has(.field-label) {
         align-items: flex-start !important;
         .field-label {
-            padding-top: 0.4375rem;
+            padding-top: 0.5rem;
         }
     }
     .page-list {
